# OCC

./: CMakeLists.txt  README.md  config.h.in
gr-occ/lib/: CMakeLists.txt  convert_color_impl.cc  convert_color_impl.h  detect_object_impl.cc  detect_object_impl.h  equalize_histogram_impl.cc  equalize_histogram_impl.h  http_video_sink_impl.cc  http_video_sink_impl.h  image_sink_impl.cc  image_sink_impl.h  image_source_impl.cc  image_source_impl.h  image_write_impl.cc  image_write_impl.h  qa_opencv.cc  qa_opencv.h  rectangle_impl.cc  rectangle_impl.h  resize_image_impl.cc  resize_image_impl.h  test_opencv.cc  udp_image_sink_impl.cc  udp_image_sink_impl.h  udp_image_source_impl.cc  udp_image_source_impl.h  video_sink_impl.cc  video_sink_impl.h  video_source_impl.cc  video_source_impl.h  video_write_impl.cc  video_write_impl.h
gr-occ/lib/streamer/: CMakeLists.txt  mjpeg_server.cpp  server.cpp
gr-occ/occ/: CMakeLists.txt  opencv_convert_color.xml  opencv_detect_object.xml  opencv_equalize_histogram.xml  opencv_http_video_sink.xml  opencv_image_sink.xml  opencv_image_source.xml  opencv_image_write.xml  opencv_rectangle.xml  opencv_resize_image.xml  opencv_udp_image_sink.xml  opencv_udp_image_source.xml  opencv_video_sink.xml  opencv_video_source.xml  opencv_video_write.xml
oc-utils/python/modtool/: CMakeLists.txt  README.modtool  __init__.py  code_generator.py  modtool.conf.in  modtool_add.py  modtool_base.py  modtool_disable.py  modtool_help.py  modtool_info.py  modtool_makexml.py  modtool_newmod.py  modtool_rm.py  occ_xml_generator.py  parser_cc_block.py  templates.py  util_functions.py
occ/: CMakeLists.txt  README  occ.conf.in  occ.kdev4  todo.txt
occ/.kdev4/: grc.kdev4
occ/base/: Block.py  CMakeLists.txt  Connection.py  Constants.py  Element.py  FlowGraph.py  Param.py  ParseXML.py  Platform.py  Port.py  __init__.py  block_tree.dtd  flow_graph.dtd  odict.py
occ/blocks/: CMakeLists.txt  block_tree.xml  options.xml  parameter.xml  variable.xml
occ/blocks/old/: blks2_error_rate.xml  blks2_packet_decoder.xml  blks2_packet_encoder.xml  blks2_selector.xml  blks2_tcp_sink.xml  blks2_tcp_source.xml  blks2_valve.xml  import.xml  pad_sink.xml  pad_source.xml
occ/cpp/: README
occ/examples/: CMakeLists.txt
occ/examples/simple/: variable_config.occ
occ/examples/xmlrpc/: readme.txt  xmlrpc_server.occ
occ/freedesktop/: CMakeLists.txt  README  occ_setup_freedesktop.in  ocvc-occ.desktop  ocvc-occ.xml
occ/gui/: ActionHandler.py  Actions.py  Bars.py  Block.py  BlockTreeWindow.py  CMakeLists.txt  Colors.py  Connection.py  Constants.py  Dialogs.py  DrawingArea.py  Element.py  FileDialogs.py  FlowGraph.py  MainWindow.py  Messages.py  NotebookPage.py  Param.py  Platform.py  Port.py  Preferences.py  PropsDialog.py  StateCache.py  Utils.py
occ/occ_ocvc/: CMakeLists.txt  README
occ/occ_ocvc/blks2/: error_rate.py  packet.py  selector.py  tcp.py
occ/python/: Block.py  CMakeLists.txt  Connection.py  Constants.py  FlowGraph.py  Generator.py  Param.py  Platform.py  Port.py  block.dtd  convert_hier.py  expr_utils.py  extract_docs.py  flow_graph.tmpl
occ/scripts/: CMakeLists.txt  ocvc
ocvc-runtime/: CMakeLists.txt  ConfigChecks.cmake  ctrlport.conf.in  oc_log_default.conf  ocvc-runtime.conf.in  ocvc-runtime.pc.in
ocvc-runtime/apps/: CMakeLists.txt  ocvc-config-info.cc
ocvc-runtime/examples/: CMakeLists.txt
ocvc-runtime/examples/mp-sched/: CMakeLists.txt  affinity_set.py  synthetic.py  wfm_rcv_pll_to_wav.py
ocvc-runtime/examples/network/: CMakeLists.txt  audio_sink.py  audio_source.py  dial_tone_sink.py  dial_tone_source.py  vector_sink.py  vector_source.py
ocvc-runtime/examples/volk_benchmark/: CMakeLists.txt  README  volk_math.py  volk_test_funcs.py  volk_types.py
ocvc-runtime/include/: CMakeLists.txt
ocvc-runtime/include/ocvc/: CMakeLists.txt  IcePy_Communicator.h  api.h  attributes.h  basic_block.h  block.h  block_detail.h  block_gateway.h  block_registry.h  buffer.h  constants.h  endianness.h  expj.h  feval.h  flowgraph.h  fxpt.h  fxpt_nco.h  fxpt_vco.h  hier_block2.h  high_res_timer.h  ice_application_base.h  ice_server_template.h  io_signature.h  logger.h.in  math.h  message.h  misc.h  msg_accepter.h  msg_handler.h  msg_queue.h  nco.h  oc_complex.h  prefs.h  py_feval.h  pycallback_object.h  random.h  realtime.h  realtime_impl.h  rpccallbackregister_base.h  rpcmanager.h  (+21 more)
ocvc-runtime/include/pmt/: CMakeLists.txt  api.h  pmt.h  pmt_sugar.h
ocvc-runtime/lib/: CMakeLists.txt  basic_block.cc  block.cc  block_detail.cc  block_executor.cc  block_executor.h  block_gateway_impl.cc  block_gateway_impl.h  block_registry.cc  buffer.cc  circular_file.cc  circular_file.h  complex_vec_test.h  constants.cc.in  feval.cc  flat_flowgraph.cc  flat_flowgraph.h  flowgraph.cc  hier_block2.cc  hier_block2_detail.cc  hier_block2_detail.h  high_res_timer.cc  io_signature.cc  local_sighandler.cc  local_sighandler.h  logger.cc  malloc16.h  message.cc  misc.cc  misc.h  msg_accepter.cc  msg_handler.cc  msg_queue.cc  ocvc-runtime.rc.in  pagesize.cc  pagesize.h  posix_memalign.cc  prefs.cc  qa_buffer.cc  qa_buffer.h  (+49 more)
ocvc-runtime/lib/controlport/: CMakeLists.txt  frontend.ice  ice_application_base.cc  ocvc.ice  rpcmanager.cc  rpcpmtconverters_ice.cc  rpcserver_aggregator.cc  rpcserver_booter_aggregator.cc  rpcserver_booter_ice.cc  rpcserver_ice.cc  rpcserver_selector.cc
ocvc-runtime/lib/math/: CMakeLists.txt  fast_atan2f.cc  fxpt.cc  qa_fxpt.cc  qa_fxpt.h  qa_fxpt_nco.cc  qa_fxpt_nco.h  qa_fxpt_vco.cc  qa_fxpt_vco.h  qa_math.cc  vco.h  (+5 more)
ocvc-runtime/python/: CMakeLists.txt  build_utils_codes.py
ocvc-runtime/swig/: CMakeLists.txt  basic_block.i  block.i  block_detail.i  block_gateway.i  buffer.i  constants.i  feval.i  gen-swig-bug-fix  hier_block2.i  io_signature.i  message.i  msg_handler.i  msg_queue.i  oc_ctrlport.i  oc_extras.i  oc_logger.i  oc_swig_block_magic.i  oc_types.i  ocvc.i  ocvc_swig_bug_workaround.h  pmt_swig.i  prefs.i  realtime.i  runtime_swig.i  single_threaded_scheduler.i  sync_block.i  sync_decimator.i  sync_interpolator.i  tagged_stream_block.i  tags.i  top_block.i
(+157 files in other folders)
